--- a/src/styles.css
+++ b/src/styles.css
@@ -27,9 +27,19 @@ img {
   align-items: center;
 }
 .search-form input {
-  width: 250px;
   height: 50px;
   font-size: 35px;
+}
+
+@media (min-width: 425px) {
+  .search-form input {
+    width: 250px;
+  }
+}
+@media (max-width: 425px) {
+  .search-form input {
+    width: 150px;
+  }
 }
 
 .photo-card {
@@ -65,4 +75,19 @@ img {
 }
 .is-hidden {
   display: none;
+}
+.ui-pnotify {
+  background-color: red;
+}
+.findPhotosBtn {
+  background-color: teal;
+  padding: 10px 20px;
+  border-radius: 10px;
+  margin-left: 10px;
+  color: white;
+  transition: all 1s;
+}
+.findPhotosBtn:hover {
+  background-color: aquamarine;
+  color: black;
 }
